--- a/sass/layouts/_form.scss
+++ b/sass/layouts/_form.scss
@@ -63,7 +63,7 @@
         outline: 4px solid $clr-pri;
       }
     }
-    .lecteur {
+    .lect-ecran {
       position: absolute;
       top: 10000px;
     }
