--- a/sass/components/_boutons.scss
+++ b/sass/components/_boutons.scss
@@ -1,4 +1,3 @@
-
 // Bouton d'ouverture
 .btn {
   width: 170px;
@@ -7,13 +6,10 @@
   border-radius: 5px;
   border: none;
   font-size: 1.125em;
-  font-size: 18px;
-
   font-weight: 700;
   color: white;
   @include tab-max {
     line-height: 35px;
-    font-size: 1.125em;
   }
   &:hover, &:focus {
     background-color: $clr-sec;
@@ -39,9 +35,8 @@
     padding: 0 20px 0 20px;
     text-align: left;
     cursor: pointer;
-    span {
+    &__texte {
       font-weight: 700;
-      font-size: 18px;
     }
     .fa-chevron-down {
       position: absolute;
