--- a/sass/components/_vignette.scss
+++ b/sass/components/_vignette.scss
@@ -1,6 +1,7 @@
 // Vignette des photographes (page d'accueil)
 .vignette {
     margin-bottom: 50px;
+    text-align: center;
     @include tab-max {
       width: 48%;
     }
@@ -15,27 +16,23 @@
       > h2 {
         font-size: 2.25em;
         color: $clr-sec;
-        text-align: center;
       }
-    // &:hover > h2, &:focus > h2 {
-    //   color: white;
-    //   background: $clr-sec;
-    //   border-radius: 5px;
-    // }
+    &:focus > h2 {
+      color: white;
+      background: $clr-sec;
+      border-radius: 5px;
+    }
     }
     p:nth-of-type(1) {
-      font-size: 0.813em;
-      text-align: center;
+      font-size: 0.8125em;
       color: $clr-pri;
     }
     p:nth-of-type(2) {
-      font-size: 0.813em;
-      text-align: center;
+      font-size: 0.625em;
       margin-top: 3px;
     }
     p:nth-of-type(3) {
-      font-size: 0.563em;
-      text-align: center;
+      font-size: 0.5625em;
       color: #757575;
       margin-top: 3px;
     }
@@ -44,9 +41,11 @@
       flex-wrap: wrap;
       justify-content: center;
       margin-top: 5px;
-      a {
-        @include tags;
-        cursor: pointer;
+      li:focus > .etiq-cont {
+        border: 2px solid $clr-pri;
+      }
+      .etiq-cont {
+        @include tags(0.813em, 11px);
       }
     }
   }
