--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,16 +14,26 @@ a {
   text-decoration: none;
 }
 
-h1, h2, ul, p, figure, button {
+h1, h2, h3, h4, ul, p, figure, button {
   padding: 0;
   margin: 0;
+}
+
+button {
+  background-color: white;
+  border: none;
+  cursor: pointer;
+}
+
+button > * {
+  pointer-events: none;
 }
 
 ul {
   list-style-type: none;
 }
 
-.lect-ecran {
+.lect-ecr {
   border: 0;
   clip: rect(0 0 0 0);
   height: 1px;
@@ -32,4 +42,8 @@ ul {
   padding: 0;
   position: absolute;
   width: 1px;
- }
+}
+
+*:focus {
+  outline: 1px dashed $clr-pri;
+}
