--- a/sass/components/_fiche.scss
+++ b/sass/components/_fiche.scss
@@ -6,6 +6,7 @@
   margin-top: 40px;
   padding: 56px 50px;
   @include tab-max {
+    margin-top: 30px;
     background-color: white;
     padding: 0;
   }
@@ -23,7 +24,7 @@
     font-size: 1.5em;
     color: $clr-pri;
     @include tab-max {
-      font-size: .813em;
+      font-size: .8125em;
     }
   }
   &__citation {
@@ -31,23 +32,14 @@
     color: #525252;
     margin-top: 18px;
     @include tab-max {
-      font-size: .813em;
+      font-size: .8125em;
       margin-top: 6px;
       color: #757575;
     }
   }
-  &__liste {
+  &__liste-etiq {
     display: flex;
-    margin-top: 20px;
+    margin: 20px 0 0 -2px;
     max-width: 180px;
-    li:focus > .etiq-cont--pho {
-      border: 2px solid $clr-pri;
-    }
-    .etiq-cont--pho {
-      @include tags(1.125em, 12px);
-      @include tab-max {
-        @include tags(0.813em, 11px);
-      }
-    }
-  }    
+  }
 }
