--- a/sass/components/_vignette.scss
+++ b/sass/components/_vignette.scss
@@ -1,51 +1,47 @@
 // Vignette des photographes (page d'accueil)
 .vignette {
-    margin-bottom: 50px;
-    text-align: center;
-    @include tab-max {
-      width: 48%;
-    }
-    @include mob-max {
-      width: auto;
-    }
-    &__lien {
-      display: block;
-      img {
-        margin: 0 auto;
-      }
-      > h2 {
-        font-size: 2.25em;
-        color: $clr-sec;
-      }
-    &:focus > h2 {
-      color: white;
-      background: $clr-sec;
-      border-radius: 5px;
-    }
-    }
-    p:nth-of-type(1) {
-      font-size: 0.8125em;
-      color: $clr-pri;
-    }
-    p:nth-of-type(2) {
-      font-size: 0.625em;
-      margin-top: 3px;
-    }
-    p:nth-of-type(3) {
-      font-size: 0.5625em;
-      color: #757575;
-      margin-top: 3px;
-    }
-    &__liste {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin-top: 5px;
-      li:focus > .etiq-cont {
-        border: 2px solid $clr-pri;
-      }
-      .etiq-cont {
-        @include tags(0.813em, 11px);
-      }
-    }
+  min-width: 25%;
+  margin-bottom: 50px;
+  text-align: center;
+  @include tab-max {
+    width: 48%;
+    min-width: initial;
   }
+  @include mob-max {
+    width: 100%;
+  }
+  &__lien {
+    display: block;
+    img {
+      margin: 0 auto;
+    }
+    > h2 {
+      font-size: 2.25em;
+      color: $clr-sec;
+    }
+  &:focus > h2 {
+    color: white;
+    background: $clr-sec;
+    border-radius: 5px;
+  }
+  }
+  p:nth-of-type(1) {
+    font-size: 0.8125em;
+    color: $clr-pri;
+  }
+  p:nth-of-type(2) {
+    font-size: 0.625em;
+    margin-top: 3px;
+  }
+  p:nth-of-type(3) {
+    font-size: 0.5625em;
+    color: #757575;
+    margin-top: 3px;
+  }
+  &__liste-etiq {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 7px;
+  }
+}
